--- a/site/main.css
+++ b/site/main.css
@@ -20,11 +20,12 @@ button.form { font-size: 12pt }
 #topGrid { width: 100%; height: 55%; padding-top: 10px; z-index: 1; }
 #topLeft { width: 50%; float: left; margin-left: 0px; z-index: 1 }
 #topRight { width: 50%; float: right; z-index: 1 }
-#btmGrid { width: 100%; height: 15%; z-index: 1 }
+#btmGrid { width: 100%; height: 10%; z-index: 1 }
 #btmLeft { width: 50%; float: left; z-index: 1 }
 #btmRight { width: 50%; float: right; z-index: 1 }
 #mainLeft { width: 70%; float: left; }
 #mainRight { width: 30%; float: right; margin-top: 10%}
+#messages { color: red; font-size: 12pt }
 
 input[type=submit], input[type=reset] {
 	-moz-box-shadow:inset 0px 17px 20px -11px #bee2f9;
