--- a/site/main.css
+++ b/site/main.css
@@ -15,8 +15,8 @@ button.form { font-size: 12pt }
 #Adminmenu { display: none; z-index: 999; width: 210px; margin-left: 76px; background-image: url(pix/gradient.png); background-repeat: repeat-y; position: absolute; height: 155px; padding: 0px 10px 0px 10px; float: left}
 #Testmenu { display: none; z-index: 999; width: 150px; margin-left: 153px; background-image: url(pix/gradient.png); background-repeat: repeat-y; position: absolute; height: 80px; padding: 0px 10px 0px 10px; float: left}
 
-#mainbody { width: 900px; margin-top: 5px z-index: 1; margin-right: 224px}
-#subHeader { width: 1100px; padding-top: 1px; z-index: 1 height: 5%; border-radius: 0px 10px; background: lightblue; padding-left: 20px; padding-bottom: 1px; }
+#mainbody { width: 900px; margin-top: 5px; z-index: 1; margin-right: 224px}
+#subHeader { width: 1100px; padding-top: 1px; z-index: 1; height: 5%; border-radius: 0px 10px; background: lightblue; padding-left: 20px; padding-bottom: 1px; }
 #topGrid { width: 100%; height: 55%; padding-top: 10px; z-index: 1; }
 #topLeft { width: 50%; float: left; margin-left: 0px; z-index: 1 }
 #topRight { width: 50%; float: right; z-index: 1 }
@@ -28,11 +28,11 @@ button.form { font-size: 12pt }
 #messages { color: red; font-size: 12pt }
 
 input[type=submit], input[type=reset] {
-	-moz-box-shadow:inset 0px 17px 20px -11px #bee2f9;
+	box-shadow: inset 0px 17px 20px -11px #bee2f9;
 	-webkit-box-shadow:inset 0px 17px 20px -11px #bee2f9;
 	box-shadow:inset 0px 17px 20px -11px #bee2f9;
 	background-color:#63b8ee;
-	-moz-border-radius:15px;
+	border-radius:15px;
 	-webkit-border-radius:15px;
 	border-radius:15px;
 	border:1px solid #3866a3;
