--- a/site/main.css
+++ b/site/main.css
@@ -1,10 +1,10 @@
-#header { background-image: url(pix/gradient.png); background-repeat: repeat-y; width: 1124px; height: 80px; text-align: left;}
-#logo { float: right; width: 300px; }
-#coName { width: 800px; float: left; margin-top: 20px; margin-left: 20px; font-family: tahoma, geneva, sans-serif; font-size: 20pt; font-weight: bold}
+#header { background-image: url(pix/gradient.png); background-repeat: repeat-y; width: 100%; height: 80px; text-align: left;}
+#logo { float: right; margin-right: 1%; width: 10%; }
+#coName { width: 60%; float: left; margin-top: 20px; margin-left: 20px; font-family: tahoma, geneva, sans-serif; font-size: 20pt; font-weight: bold}
 .my { font-size: 1pt; color: white }
 .required { color: red; font-weight: bold; }
 
-#menu { background-image: url(pix/gradient.png); background-repeat: repeat-y; width: 1124px; margin-top:1px; }
+#menu { background-image: url(pix/gradient.png); background-repeat: repeat-y; width: 100%; margin-top:1px; }
 td.menu { padding: 0px 10px 0px 10px; border-left: 2px groove grey; border-right: 2px ridge black; }
 input { background-color: transparent; color: black; font-weight: bold; border-color: black; }
 select { background-color: transparent; color: black; font-weight: bold; border-color: black; }
@@ -15,8 +15,8 @@ button.form { font-size: 12pt }
 #Adminmenu { display: none; z-index: 999; width: 210px; margin-left: 76px; background-image: url(pix/gradient.png); background-repeat: repeat-y; position: absolute; height: 155px; padding: 0px 10px 0px 10px; float: left}
 #Testmenu { display: none; z-index: 999; width: 150px; margin-left: 153px; background-image: url(pix/gradient.png); background-repeat: repeat-y; position: absolute; height: 80px; padding: 0px 10px 0px 10px; float: left}
 
-#mainbody { width: 900px; margin-top: 5px; z-index: 1; margin-right: 224px}
-#subHeader { width: 1100px; padding-top: 1px; z-index: 1; height: 5%; border-radius: 0px 10px; background: lightblue; padding-left: 20px; padding-bottom: 1px; }
+#mainbody { width: 100%; margin-top: 5px; z-index: 1; margin-right: 224px}
+#subHeader { width: 97%; padding-top: 1px; z-index: 1; height: 5%; border-radius: 0px 10px; background: lightblue; padding-left: 20px; padding-bottom: 1px; }
 #topGrid { width: 100%; height: 55%; padding-top: 10px; z-index: 1; }
 #topLeft { width: 50%; float: left; margin-left: 0px; z-index: 1 }
 #topRight { width: 50%; float: right; z-index: 1 }
@@ -53,7 +53,7 @@ input[type=submit]:active, input[type=reset]:active {
 	top:1px;
 }
 
-#footer { background-image: url(pix/gradient.png); background-repeat: repeat-y; width: 1124px; height: 20px; font-size: 8pt; font-family: Lucida Console, Monaco, monospace; font-weight: bold; padding-top: 5px; position: relative}
+#footer { background-image: url(pix/gradient.png); background-repeat: repeat-y; width: 100%; height: 20px; font-size: 8pt; font-family: Lucida Console, Monaco, monospace; font-weight: bold; padding-top: 5px; position: relative}
 
 p.important { background-color: red; color: yellow; width: 600px; text-align: center; font-size: 12pt}
 
